--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "component-library",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://mcook-2.github.io/cook_mckenzie_final_site/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "test": "jest",
     "storybook": "storybook dev -p 8018",
     "build-storybook": "storybook build",
@@ -71,6 +74,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "gh-pages": "^6.1.1",
     "globals": "^15.8.0",
     "http-server": "^14.1.1",
     "husky": "^9.1.1",
